--- a/desafio HTML/desafio-modulo-03/pacote-d012/desafio12/estilo/style.css
+++ b/desafio HTML/desafio-modulo-03/pacote-d012/desafio12/estilo/style.css
@@ -5,9 +5,23 @@
     padding: 0px;
 }
 
+
+    @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+  @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+  :root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3: 'Sriracha', cursive;
+}
+
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 header {
@@ -19,6 +33,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: 'Passion One', sans-serif;
+    font-size: 8vw;
 }
 
 header > p {
@@ -40,6 +56,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -54,7 +72,8 @@ section.imagem {
 
 section.imagem p {
     background-color: rgba(0, 0, 0, 0.158);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
